# monorepo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vidctl  vidctl.py
.serena/: project.yml
IaC/: README.md  makefile  requirements.txt
IaC/ansible/: README.md  ansible.cfg  requirements.yml
IaC/packer/: README.md  alibaba-cloud.pkr.hcl  aws.pkr.hcl  digital-ocean.pkr.hcl  hetzner.pkr.hcl  packer.pkr.hcl  variables.pkr.hcl
IaC/pulumi/: Pulumi.dev.yaml  Pulumi.devnet.yaml  Pulumi.yaml  __main__.py
IaC/terraform/: README.md
cli/: __init__.py  __main__.py  config.py  context.py  contract.py  discovery.py  doctor.py  env.py  image_bake.py  infra.py  main.py  media_bootstrap.py  object.py  oss.py  parser.py  process.py  registry.py  scenario.py  status.py  testbed.py  vidctl.py  wallet.py
cli/contract/: __init__.py  commands.py  display.py  io.py  toml.py
cli/infra/: __init__.py  commands.py  discovery.py  inventory.py  terraform.py
cli/observe/: __init__.py  commands.py  status.py
cli/oss/: __init__.py  cert.py  commands.py
cli/registry/: __init__.py  build.py  commands.py
cli/scenario/: __init__.py  run.py  (+9 more)
docs/: IaC.md  cli.md  design.md
scenario/: README.md  basic_room.py  capacity_enforcement.py  capacity_stress.py  digitalocean-sample.toml  direct_hire.py  example.toml  multi_room.py  role_voting.py  worker_churn.py  worker_lifecycle.py
tests/: test_contract_publish.py  test_env.py  test_image_bake.py  test_infra.py  test_infra_topology.py  test_monitoring.py  test_registry_cli.py  test_scenario.py
(+493 files in other folders)
